rnsc/test_data/integration/error/lexer/quoted_identifiers/escaped_tab.rns
.class public Test
"String with backslash escape followed by newline \	
.class_end
